# devfest_mlops

./: flake.nix  pyproject.toml  shell.nix
